# bandit_native

./: .gitignore  README.md  mix.exs
.github/workflows/: rustler_precompiled.yml
lib/bandit/: native.ex
native/bandit_native/: Cargo.toml  README.md
native/bandit_native/.cargo/: config.toml
native/bandit_native/src/: lib.rs
test/: bandit_native_test.exs
