[package]
name = "bandit_native"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "bandit_native"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.27.0"
simdutf8 = { git = "https://github.com/moogle19/simdutf8", branch = "export_validate", features = ["aarch64_neon"] }
